refactor(mcp): split, add view-schema, and tighten prompt code
Addresses three review threads on PR #86:

1. Split the previous `explore-and-create-collections` (the literal "AND"
   in the name was a code smell — two independent intents, different
   argument shapes) into:
   - `explore-collections` (no args, read-only)
   - `setup-collection` (args: name, optional purpose; cross-references
     `design-schema` for the next step)

2. Add `view-schema` — read-only schema introspection prompt that walks
   the LLM through summarising fields, types, dynamic fields, copy
   fields, and the unique key. Distinct from the mutating
   `design-schema`.

3. Conciseness / language-features pass:
   - Centralize prompt names in `PromptNames` so prompt bodies that
     cross-reference siblings cannot drift from the `@McpPrompt(name)`
     declarations.
   - Extract the duplicated "optional code-block section" pattern to
     `util.PromptText.optionalCodeBlock`.
   - Collapse the two parallel `switch` expressions in `indexDataPrompt`
     into one switch returning a `record IndexTool(name, paramName)`.
     Throw `IllegalArgumentException` for unknown formats instead of
     soft-warning in the prompt text.
   - Interpolate `DEFAULT_CONFIGSET` / `DEFAULT_NUM_SHARDS` /
     `DEFAULT_REPLICATION_FACTOR` into `setup-collection` so the prompt
     text and the tool stay in lockstep.
   - Replace `list.get(0)` with `list.getFirst()` in
     `extractFirstMessageText`, `extractText`, and `assertNotError`.

Tests updated:
- Unit tests reorganised around the new prompt set; added coverage for
  `view-schema`, `setup-collection` (with and without purpose), and the
  `IllegalArgumentException` on unknown format.
- `McpClientIntegrationTestBase` orders 28–34 list and fetch all six
  prompts via the real MCP client, referencing `PromptNames` constants
  rather than literal strings.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>
Signed-off-by: adityamparikh <aditya.m.pa